# contractsV2

./: .gitignore  README.md  foundry.toml  notes.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
eip-4788-prover/: Cargo.toml  block_header.json
eip-4788-prover/consensus_types/: Cargo.toml
eip-4788-prover/consensus_types/src/: beacon_block.rs  beacon_state.rs  lib.rs  types.rs
eip-4788-prover/dbg/: Cargo.toml
eip-4788-prover/dbg/src/: main.rs
eip-4788-prover/prover/: Cargo.toml
eip-4788-prover/prover/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/data/: block.json
integration-tests/src/: consensus_types.rs  lib.rs  merkle.rs
observer/: :w  Cargo.toml  block.json
observer/src/: consensus_types.rs  main.rs
proofs/: index.ts  package-lock.json  package.json  tsconfig.json  validator_registration.json
src/: BeaconOracle.sol  SSZ.sol  Smooth.sol  SmoothlyPoolV2.sol
src/interfaces/: IBeaconOracle.sol  ISmoothlyPoolV2.sol
src/libraries/: Arrays.sol  Merkle.sol
test/: BeaconOracle.t.sol  Merkle.t.sol  ProofHelper.t.sol  SmoothlyPoolV2.t.sol  SmoothlyPoolV2Internal.t.sol
test/fixtures/: validator_registration.json
test/test-data/: fee_recipient_slash.json  validator_465789_registration.json  validator_465789_withdrawal.json
