[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssz_rs = { git="https://github.com/ralexstokes/ssz-rs.git" } 
types = { git="https://github.com/sigp/lighthouse.git" }
eth2 = { git="https://github.com/sigp/lighthouse.git" }
merkle_proof = { git="https://github.com/sigp/lighthouse.git" }
http_api = { git="https://github.com/sigp/lighthouse.git" }
tokio = { version="1.37.0", features=["full"]}
arbitrary = { version = "1", features = ["derive"] }
tree_hash = "0.5"
tree_hash_derive = "0.5"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
serde = "1.0.198"
ethereum_hashing = "0.6.0"

