[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
consensus_types = { path = "../consensus_types" }
ssz_rs = { git="https://github.com/noahfigueras/ssz-rs.git", features=["serde"], branch="multi-proof-generation"} 
tokio = { version="1.37.0", features=["full"]}
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
hex = "0.4.3"
ssz_types = "0.6.0"
